# web-ai

./: .dockerignore  .env.example  .env.head.example  .env.node.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  supervisord.conf  webai.py  webai_head.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ConfirmDialog.tsx  Header.tsx  TaskCard.tsx
frontend/src/contexts/: apiStatus.tsx
frontend/src/pages/: CreateTaskPage.tsx  NodesPage.tsx  TaskDetailPage.tsx  TasksPage.tsx
frontend/src/types/: mui-system.d.ts
frontend/src/utils/: status.ts
src/web_ai/: __init__.py  app.py  config.py  head_app.py  head_config.py  models.py  security.py  storage.py  task_runner.py  vnc.py
src/web_ai/agent/: __init__.py  browser_use_agent.py
src/web_ai/browser/: __init__.py  custom_browser.py  custom_context.py
src/web_ai/controller/: __init__.py  custom_controller.py  mcp.py
src/web_ai/static/css/: main.css
src/web_ai/static/js/: app.js  common.js  create.js  task_detail.js  tasks.js
src/web_ai/templates/: base.html  create_task.html  index.html  task_detail.html  tasks.html
tests/: test_scheduling.py  test_vnc_assist.py
