[project]
name = "web-ai"
version = "0.1.0"
description = "FastAPI dashboard for Browser-Use tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use==0.1.48",
    "pyperclip==1.9.0",
    "gradio==5.27.0",
    "json-repair",
    "langchain-mistralai==0.2.4",
    "MainContentExtractor==0.0.4",
    "langchain-ibm==0.3.15",
    "langchain_mcp_adapters==0.0.9",
    "langgraph==0.3.34",
    "langchain-community",
    "fastapi==0.115.4",
    "uvicorn[standard]==0.32.0",
    "itsdangerous==2.2.0",
    "aiofiles==24.1.0",
    "pydantic-settings==2.6.1",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
]
